--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
-# development:
-  # adapter: sqlite3
-  # database: db/development.sqlite3
-  # pool: 5
-  # timeout: 5000
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 # 
 # test:
   # adapter: sqlite3
@@ -27,9 +27,9 @@ default: &default
   username: ebksrkvbukkpco
   password: vX7-wu-MhmashI1Gr8vbeW_qeG
   
-development:
-  <<: *default
-  database: d5gtr2a05ldj2r
+# development:
+  # <<: *default
+  # database: d5gtr2a05ldj2r
  
   
 test:
